tests/compile-fail/interned_not_update.stderr
error: lifetime may not live long enough
 --> tests/compile-fail/interned_not_update.rs:7:48
  |
7 | fn tracked_fn<'db>(_db: &'db dyn Db, _: (), _: &'db str) {}
  |               --- lifetime `'db` defined here  ^ requires that `'db` must outlive `'static`

error: lifetime may not live long enough
  --> tests/compile-fail/interned_not_update.rs:11:13
   |
10 | struct Interned<'db> {
   |                 --- lifetime `'db` defined here
11 |     _field: &'db str,
   |             ^ requires that `'db` must outlive `'static`
